--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Be Eye</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--  홈  -->
+    <string name="home_lan_tmp">한국어로 번역해드려요!👀</string>
+    <string name="home_btn_record">음성 녹음</string>
+    <string name="home_btn_camera">카메라</string>
+    <string name="home_btn_gallery">이미지</string>
+
 </resources>
