--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,8 @@
     <string name="home_btn_camera">카메라</string>
     <string name="home_btn_gallery">이미지</string>
 
+    <!-- 다이얼로그   -->
+    <string name="dialog_camera_permission"><b>카메라</b>를 활용하려면 \n 해당 권한이 필요합니다!🙇‍</string>
+    <string name="dialog_btn_yes">확인</string>
+
 </resources>
