--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--  네비  -->
+    <string name="fragment_home">홈</string>
+    <string name="fragment_radio">음성 녹음</string>
+
     <!--  홈  -->
     <string name="home_lan_tmp">한국어로 번역해드려요!👀</string>
     <string name="home_btn_record">음성 녹음</string>
